# TheSphere

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  railway.backend.json  railway.frontend.json
backend/: alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py  ranking_weights.yaml  settings.py
backend/app/api/: routes.py
backend/app/cache/: __init__.py
backend/app/db/: __init__.py  postgres.py  redis.py
backend/app/intelligence/: __init__.py  runtime.py
backend/app/models/: schemas.py
backend/app/security/: __init__.py  rate_limit.py  redis_rate_limit.py
backend/app/services/: data_simulator.py  query_parser.py
backend/app/websocket/: manager.py
backend/migrations/: env.py
backend/migrations/versions/: 20260426_0001_investigations.py  20260427_0002_query_log.py
backend/tests/: test_api.py  test_query_parser.py  test_rate_limit.py  test_simulator.py  test_websocket.py
backend/tests/intelligence/: conftest.py  test_adapters.py  test_agent_place_routing.py  test_agent_service.py  test_alert_repository_contract.py  test_alerts.py  test_alerts_routes.py  test_alpha_vantage_supports.py  test_calibration.py  test_candles_route.py  test_causal_engine.py  test_compare_planner.py  test_compare_service.py  test_dedupe.py  test_dependency_service.py  test_geo.py  test_investigations.py  test_investigations_routes.py  test_lifespan.py  test_market_data_cache.py  test_market_data_provider.py  test_market_narrative.py  test_market_posture_blend.py  test_market_posture_engine.py  test_portfolio.py  (+22 more)
(+388 files in other folders)
